admin view updated

--- a/views/admin.hbs
+++ b/views/admin.hbs
@@ -1,2 +1,5 @@
-
+Admin Page
+*list an action table to perform admin actions
+*list a table of therapist and clients
+*add an update profile section to top right header
 
